--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,6 +3,7 @@ header {
   width: 100%;
   height: auto;
   margin: auto;
+  position: relative;
   padding: 15px 0px;
 }
 body {
@@ -123,4 +124,15 @@ header .header-Tabs li span img {
 
 header Modal {
   background-color: red;
+}
+.body-login{
+
+  left: 0; 
+  right: 0; 
+  
+  margin-left: auto; 
+  margin-right: auto;
+position: fixed ;
+z-index: 1000;
+top: 7%;
 }
