--- a/src/components/pages/home/popular/Popular.css
+++ b/src/components/pages/home/popular/Popular.css
@@ -28,9 +28,11 @@
 .homeProducts .productRow{
     display: flex;
     padding: 30px 0px;
+    margin: 0px -15px;
 
 }
 .homeProducts .productRow .item{
     width: 20%;
     padding: 0px 15px;
+    
 }
