--- a/src/components/Products/Product.css
+++ b/src/components/Products/Product.css
@@ -9,8 +9,26 @@
 .ProductThumb .title{
     color: #000;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 20px;
+    line-height: 22px;
+    text-decoration: none;
 }
-.ProductThumb .info .foot .rupees{
-    font-size: large;
+.ProductThumb .price{
+    font-size: 25px;
+    margin-right: 20px;
+}
+.ProductThumb .oldprice{
+    font-size: 18px;
+    opacity: 0.6;
+    color: #000;
+    text-decoration: line-through;
+    margin-left: -10px;
+}
+.ProductThumb .button1{
+    background-color: rgba(250,105,105);
+    font-size: 22px;
+    color: #fff !important;
+    padding: 5px 25px !important;
+    margin-left: 20px;
+    border: #fff;
 }
