--- a/src/components/pages/home/popular/Popular.css
+++ b/src/components/pages/home/popular/Popular.css
@@ -29,10 +29,11 @@
     display: flex;
     padding: 30px 0px;
     margin: 0px -15px;
+    flex-wrap: wrap;
 
 }
 .homeProducts .productRow .item{
     width: 20%;
-    padding: 0px 15px;
+    padding: 15px 15px;
     
 }
