--- a/src/components/header/Login.css
+++ b/src/components/header/Login.css
@@ -130,3 +130,45 @@ hr {
     color: #ca1616;
     text-decoration: none;
 }
+.buttons{
+       width: 250px;
+       height: 50px;
+       margin: 25px;
+       position: relative;
+       box-shadow: 0 0 20px 9px #d831311f;
+       border-radius: 30px;
+}
+.login{
+    padding: 10px 30px;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    position: relative;
+}
+#btn{
+    top: 0;
+    left: 50%;
+    position:absolute;
+    width: 140px;
+    height: 100%;
+    background: linear-gradient(to right,rgb(199, 22, 22),rgb(235, 83, 6));
+    border-radius: 30px;
+    transition: .5s;
+}
+#btnlogin{
+    top: 0;
+    left: 0;
+    position:absolute;
+    width: 140px;
+    height: 100%;
+    background: linear-gradient(to right,rgb(199, 22, 22),rgb(235, 83, 6));
+    border-radius: 30px;
+    transition: .5s;
+}
+.sign{
+    width: 100%;
+    background-color: #ffffff;
+    color: #adacac;
+    font-size: 14px;
+}
