--- a/src/components/header/Login.css
+++ b/src/components/header/Login.css
@@ -172,3 +172,9 @@ hr {
     color: #adacac;
     font-size: 14px;
 }
+.undo{
+    background: transparent;
+    background-color: rgb(255, 255, 255);
+    width: 20px;
+    margin-left: 300px;
+}
