--- a/src/components/Products/Product.css
+++ b/src/components/Products/Product.css
@@ -1,61 +1,87 @@
-.ProductThumb{
-    width: 100%;
-    height: auto;
-    border: 1px solid rgba(0,0,0,0.1);
-    overflow: hidden;
-    border-radius: 5px;
-    padding: 15px;
-    border-radius: 20px;
-    transition: all 0.3s ease-in-out;
+.ProductThumb {
+  width: 100%;
+  height: auto;
+  min-height: 610px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  border-radius: 5px;
+  padding: 15px;
+  border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+}
+.ProductThumb .information {
+  position: relative;
+}
+.ProductThumb .information svg {
+  width: 25px;
+}
+.ProductThumb .brand1 {
+  font-size: 15px;
+  opacity: 0.5;
 }
 
-.ProductThumb:hover{
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
+.ProductThumb:hover {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-.ProductThumb .imgWrapper{
-    width: 100%;
-    overflow: hidden;
+.ProductThumb .imgWrapper {
+  width: 100%;
+  overflow: hidden;
 }
-.ProductThumb .imgWrapper img{
-    transition: all 0.3s ease-in-out;
-}
-
-.ProductThumb:hover .imgWrapper img{
-    transform: scale(1.1);
+.ProductThumb .imgWrapper img {
+  transition: all 0.3s ease-in-out;
+  border-radius: 25px;
 }
 
-.ProductThumb .title{
-    color: #000;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 22px;
-    text-decoration: none;
+.ProductThumb:hover .imgWrapper img {
+  transform: scale(1.1);
 }
-.ProductThumb .price1{
-    font-size: 25px;
-    margin-right: 20px;
-    opacity: 0.8;
+
+.ProductThumb .title {
+  color: #000;
+  font-weight: 580;
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  font-family: "Poppins";
+  font-size: 17px;
+  line-height: 22px;
+  text-decoration: none;
 }
-.ProductThumb .oldprice1{
-    font-size: 18px;
-    opacity: 0.6;
-    color: #000;
-    text-decoration: line-through;
-    margin-left: -10px;
+.ProductThumb .price1 {
+  font-size: 18px;
+  font-weight: 200;
+  color: #000;
+  margin-right: 20px;
 }
-.ProductThumb .button1{
-    color: rgb(255, 0, 0);
-    background-color: #fed1d1;
-    font-size: 22px;
-    padding: 5px 15px !important;
-    margin-left: 50px;
-    border: none;
-    border-radius: 10px;
-    transition: all 0.3s ease-in-out;
-    text-transform: capitalize !important;
+.ProductThumb .oldprice1 {
+  font-size: 15px;
+  opacity: 0.6;
+  color: #000;
+  text-decoration: line-through;
+  margin-left: -10px;
 }
-.ProductThumb .button1:hover{
-    background: rgba(250,105,105);
-    color: #fff;
+
+.ProductThumb .information .txt {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.ProductThumb .button1 {
+  color: rgb(255, 0, 0);
+  background-color: #fed1d1;
+  font-size: 22px;
+  padding: 5px 15px !important;
+  margin-left: 50px;
+  border: none;
+  border-radius: 10px;
+  position: absolute;
+  right: 0;
+  transition: all 0.3s ease-in-out;
+  text-transform: capitalize !important;
+}
+.ProductThumb .button1:hover {
+  background: rgba(250, 105, 105);
+  color: #fff;
 }
