--- a/src/components/Products/Product.css
+++ b/src/components/Products/Product.css
@@ -1,7 +1,6 @@
 .ProductThumb {
-  width: 100%;
+  width: auto;
   height: auto;
-  min-height: 610px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   overflow: hidden;
   border-radius: 5px;
