--- a/src/components/pages/home/popular/Popular.css
+++ b/src/components/pages/home/popular/Popular.css
@@ -1,39 +1,35 @@
-.homeProducts{
-    margin-bottom: 200px;
-    padding: 25px 0px;
-    position: relative;
+.homeProducts {
+  padding: 25px 0px;
+  position: relative;
+  margin-bottom: 0px;
 }
-.homeProducts .list{
-    position: absolute;
-    right: 35px;
+.homeProducts .list {
+  position: absolute;
+  right: 35px;
 }
 
-
-
-.filterTabs li{
-    margin-left: 20px;
-    font-weight: 400;
+.filterTabs li {
+  margin-left: 20px;
+  font-weight: 400;
 }
-.filterTabs li a{
-    color: #000;
-    text-decoration: none;
-    font-size: 20px;
-    transition: all 0.3s ease-in-out;
-    position: relative;
+.filterTabs li a {
+  color: #000;
+  text-decoration: none;
+  font-size: 20px;
+  transition: all 0.3s ease-in-out;
+  position: relative;
 }
-.filterTabs li a:hover{
-    color: rgb(250,105,105) !important;
-    top: -10px;
+.filterTabs li a:hover {
+  color: rgb(250, 105, 105) !important;
+  top: -10px;
 }
-.homeProducts .productRow{
-    display: flex;
-    padding: 30px 0px;
-    margin: 0px -15px;
-    flex-wrap: wrap;
-
+.homeProducts .productRow {
+  display: flex;
+  padding: 30px 0px;
+  margin: 0px -15px;
+  flex-wrap: wrap;
 }
-.homeProducts .productRow .item{
-    width: 20%;
-    padding: 15px 15px;
-    
+.homeProducts .productRow .item {
+  width: 20%;
+  padding: 15px 15px;
 }
