--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -123,8 +123,9 @@ header .header-Tabs li span img {
 }
 
 header Modal {
-  background-color: red;
-}
+  backgr.
+  ound-color: red;
+} 
 .body-login {
   left: 0;
   right: 0;
