--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -123,8 +123,7 @@ header .header-Tabs li span img {
 }
 
 header Modal {
-  backgr.
-  ound-color: red;
+  background-color: red;
 } 
 .body-login {
   left: 0;
